math-core/tests/snapshots/conversion_test__exclamation_mark_spacing.snap
---
source: math-core/tests/conversion_test.rs
expression: x=!=x
---
<math>
    <mi>x</mi>
    <mo rspace="0">=</mo>
    <mo>!</mo>
    <mo>=</mo>
    <mi>x</mi>
</math>
