math-core/tests/snapshots/conversion_test__fraction_with_space.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\frac 12"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
