math-core/tests/snapshots/conversion_test__genfrac.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\genfrac(]{0pt}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="0">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo>+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
